2012-03-31  Anton Blanchard  <anton@samba.org>
2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix btrfs endianness handling.

	* grub-core/fs/btrfs.c (key_cmp): Use grub_le_to_cpu for clarity.
	(lower_bound): Make root uint64_t. Use root in le.
	(grub_btrfs_read_logical): Fix template key init. Fix address byteswap.
	(find_path): Fix template key init.
	(grub_btrfs_dir): Fix mtime byteswap.
	* include/grub/types.h (grub_cpu_to_le64_compile_time): New macro.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): New argument
	recursion_depth. Break infinite resursions. All users updated.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk): Fix use
	after free.
	Reported by: Peter Jones.

2012-03-31  Anton Blanchard  <anton@samba.org>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Do not byteswap
	8 bit values.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix nvram call for PreP.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Degrade
	the error when some elements are missing into a warning.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix out-of-range swap.

2012-03-28  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Invoking grub-probe): New section.
	Reported by: Filipus Klutiero.  Fixes Debian bug #666031.

2012-03-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix tab and wide character handling in editor and menu.

	* grub-core/normal/charset.c (grub_unicode_aglomerate_comb): Don't
	agglomerate control characters with combining marks.
	(bidi_line_wrap): Allow break on tab.
	(grub_unicode_get_comb_start): New function.
	* grub-core/normal/menu_entry.c: Restructure to handle wide characters
	and tab correctly.